Bug 1733574 - Increase visibility of shortcut image field for dark theme. r=harry
Differential Revision: https://phabricator.services.mozilla.com/D128767

UltraBlame original commit: 6c078da0ec50f3c4ba4296f9330b8f0234a20477

--- a/browser/components/newtab/content-src/components/TopSites/_TopSites.scss
+++ b/browser/components/newtab/content-src/components/TopSites/_TopSites.scss
@@ -1782,6 +1782,39 @@ topsites
 wrapper
 {
 .
+top
+-
+site
+-
+inner
+>
+.
+top
+-
+site
+-
+button
+>
+.
+tile
+{
+border
+:
+1px
+solid
+var
+(
+-
+-
+newtab
+-
+border
+-
+color
+)
+;
+}
+.
 modal
 {
 box
