--- a/browser/components/newtab/css/activity-stream-mac.css
+++ b/browser/components/newtab/css/activity-stream-mac.css
@@ -6106,6 +6106,45 @@ topsites
 -
 wrapper
 .
+top
+-
+site
+-
+inner
+>
+.
+top
+-
+site
+-
+button
+>
+.
+tile
+{
+border
+:
+1px
+solid
+var
+(
+-
+-
+newtab
+-
+border
+-
+color
+)
+;
+}
+.
+edit
+-
+topsites
+-
+wrapper
+.
 modal
 {
 box
